--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-boilerplates==1.0.1
 colored==2.2.3
-colorlog==6.8.0
 computational-stopwatch==1.0.3
 fontstyle==1.0.1.2
-gitdb==4.0.11
-GitPython==3.1.40
-numpy==1.26.2
-packaging==23.2
-semver==2.13.0
-smmap==5.0.1
-version-query==1.5.4
+names==0.3.0
